--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@ body {
     min-height: 100vh;
     display: grid;
     place-items: center;
-    background-color: lightblue;
+    background-color:#d5e1ef;
     
 }
 
@@ -19,17 +19,20 @@ body {
         background-color: white;
         padding: 1rem;
         text-align: center;
-        color: hsl(228, 45%, 44%);
+        color:#3e4a5e;
         border-radius: 10px;
+        font-size: 80%;
 }
 
 .tata img {
     width: 100%;
+    border-radius: 10px ;
 }
 
 .text {
-    background-color: aliceblue;
-    
     text-align: center;
-    color: hsl(228, 45%, 44%);
+    font-family: 'Outfit', sans-serif;
+}
+#txt{
+    color:#92959e ;
 }
