--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,9 @@
 body {
-    /* your other stuff */
     min-height: 100vh;
     display: grid;
     place-items: center;
     background-color:#d5e1ef;
     
-}
-
-. {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
 }
 
 .tata {
@@ -35,4 +28,5 @@ body {
 }
 #txt{
     color:#92959e ;
+    font-size:130% ;
 }
